# geektime-rust

rcli/: Cargo.toml  README.md
rcli/src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  mod.rs  text.rs
rcli/src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs  text.rs
