[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
rand = "0.8.5"
zxcvbn = "3.1.0"
base64 = "0.22.0"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
